--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,3 +46,11 @@ body {
     transform: translateX(100%);
   }
 }
+
+@media (max-width: 768px) {
+  html,
+  body,
+  .bg-main {
+    overflow-x: hidden;
+  }
+}
